--- a/_site.yml
+++ b/_site.yml
@@ -8,5 +8,7 @@ navbar:
     - text: "Home"
       href: index.html
     - text: "About"
-      href: about.html
+      href: about.html        
+    - text: "WTO"
+      href: https://www.who.int
 output: distill::distill_article
